# TyaLogger

./: CMakeLists.txt  Logger.cpp  Logger.h  Logger.hpp  TyaLoggerExport.h
tests/: loggingTest.cpp  loggingtest.cpp
